# shout

./: .gitignore  AUTHORS  Makefile.in  README  configure  configure-make.sh  configure.ac  shout.kdevelop
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
html/: FFTReal_8cpp.html  FFTReal_8h.html  adapt__am_8cpp.html  adapt__am_8h.html  adapt__am__main_8cpp.html  adapt__am__treenode_8cpp.html  adapt__am__treenode_8h.html  adapt__segmenter_8cpp.html  adapt__segmenter_8h.html  annotated.html  articulatorystream_8cpp.html  articulatorystream_8h.html  avgenergy_8cpp.html  avgenergy_8h.html  classAdapt__AM-members.html  classAdapt__AM.html  classAdapt__AM_1aa6f2d43f63125bb19384c0c1ecd9a7_cgraph.map  classAdapt__AM_1aa6f2d43f63125bb19384c0c1ecd9a7_cgraph.md5  classAdapt__AM__TreeNode-members.html  classAdapt__AM__TreeNode.html  classAdapt__AM__TreeNode_1d25e0f9a3d1fbab3d61072e8955b292_cgraph.map  classAdapt__AM__TreeNode_1d25e0f9a3d1fbab3d61072e8955b292_cgraph.md5  classAdapt__AM__TreeNode_86e37f535a972348264fa6cf29c902f0_cgraph.map  classAdapt__AM__TreeNode_86e37f535a972348264fa6cf29c902f0_cgraph.md5  classAdapt__AM__TreeNode_a5f8d31c1b818f5497637c7c9b4f0273_cgraph.md5  classAdapt__AM__TreeNode_ca70aa2d074b7804563db3dde193b3d6_cgraph.map  classAdapt__AM__TreeNode_ca70aa2d074b7804563db3dde193b3d6_cgraph.md5  classAdapt__AM__TreeNode_d5c0e32f6032923a1cb33ac38f2390db_cgraph.md5  classAdapt__Segmenter-members.html  classAdapt__Segmenter.html  classAdapt__Segmenter_9dc9ff8d1877b0a4795d35451cfd62e4_cgraph.map  classAdapt__Segmenter_9dc9ff8d1877b0a4795d35451cfd62e4_cgraph.md5  classAdapt__Segmenter__inherit__graph.map  classAdapt__Segmenter__inherit__graph.md5  classAdapt__Segmenter_fa79b23403fc16d3fd7c5ccdf64af205_cgraph.map  classAdapt__Segmenter_fa79b23403fc16d3fd7c5ccdf64af205_cgraph.md5  classArticulatoryStream-members.html  classArticulatoryStream.html  classArticulatoryStream_078425a9577f2f513b403e447bff2712_cgraph.map  classArticulatoryStream_078425a9577f2f513b403e447bff2712_cgraph.md5  (+1333 more)
html/img/: adapt_cdm.sxd  clustering.sxd  smaplr_iterations.sxd  training.sxd
html/img/CVS/: Entries  Repository
release/: Makefile  config.h  config.status
release/src/: Makefile
release/src/.deps/: FFTReal.Po  adapt_am.Po  adapt_am_main.Po  adapt_am_treenode.Po  adapt_segmenter.Po  articulatorystream.Po  avgenergy.Po  featureextraction.Po  featurepool.Po  gaussian.Po  hash.Po  languagemodel.Po  languagemodel_segmenter.Po  lexicaltree.Po  memmappedfile.Po  mergetrainset.Po  mixgaussian.Po  multimixgaussian.Po  normalizeam.Po  phonefilereader.Po  phonemodel.Po  segmenter.Po  shout_cluster.Po  shout_dct2lextree.Po  shout_lm2bin.Po  shout_maketrainset.Po  shout_maketrainset_main.Po  shout_misc.Po  shout_preprocess.Po  shout_updateversion.Po  shout_vtln.Po  shout_vtln_main.Po  shoutconfig.Po  shoutmergeam.Po  shoutonline.Po  shoutprepareadapt.Po  shoutsegment.Po  shouttrainfinish.Po  shouttrainfinishsat.Po  shouttrainmmi.Po  (+10 more)
src/: FFTReal.cpp  FFTReal.h  Makefile.am  Makefile.in  adapt_am.cpp  adapt_am.h  adapt_am_main.cpp  adapt_am_treenode.cpp  adapt_am_treenode.h  adapt_segmenter.cpp  adapt_segmenter.h  articulatorystream.cpp  articulatorystream.h  avgenergy.cpp  avgenergy.h  debug.h  documentation.h  featureextraction.cpp  featureextraction.h  featurepool.cpp  featurepool.h  gaussian.cc  gaussian.h  hash.cpp  hash.h  io_speaker_segmenter.cpp  io_speaker_segmenter.h  languagemodel.cpp  languagemodel.h  languagemodel_segmenter.cpp  languagemodel_segmenter.h  lexicaltree.cpp  lexicaltree.h  memmappedfile.cpp  memmappedfile.h  mergetrainset.cpp  mergetrainset.h  mixgaussian.cc  mixgaussian.h  multimixgaussian.cpp  (+66 more)
